<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="nanodegree_apps">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Buttons -->
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_app">CAPSTONE: MY OWN APP</string>

    <string name="toast_msg">This button will launch my %s app!</string>
</resources>
