<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/main_screen_bg"
    tools:context=".MyAppPortfolio">

    <TextView
        android:id="@+id/title"
        android:text="@string/nanodegree_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/TitleFont"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/spotify_streamer"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/spotify"
                android:onClick="launchToast"
                style="@style/AppButton"
                />

            <Button
                android:id="@+id/scores"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/scores_app"
                android:onClick="launchToast"
                style="@style/AppButton"
                />

            <Button
                android:id="@+id/library"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/library_app"
                android:onClick="launchToast"
                style="@style/AppButton"
                />

            <Button
                android:id="@+id/build"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/build_bigger"
                android:onClick="launchToast"
                style="@style/AppButton"
                />

            <Button
                android:id="@+id/xyz_reader"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/xyz_reader"
                android:onClick="launchToast"
                style="@style/AppButton"
                />

            <Button
                android:id="@+id/capstone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/capstone_app"
                android:onClick="launchToast"
                style="@style/AppButton"
                android:background="@color/capstone_button"
                />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
